--- a/Cat/Cat.csproj
+++ b/Cat/Cat.csproj
@@ -11,12 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Unity" Version="5.8.11" />
   </ItemGroup>
 
 </Project>
