--- a/Cat/Cat.csproj
+++ b/Cat/Cat.csproj
@@ -12,8 +12,15 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.0.0-beta" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Unity" Version="5.8.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cat.Persistence.EntityFrameworkCore\Cat.Persistence.EntityFrameworkCore.csproj" />
   </ItemGroup>
 
 </Project>
